[metadata]
name = Media-Downloader_for_LINE
version = 1.0.7
author = Dream
long_description = file: README.md

[options]
packages = find:
install_requires =
    Flask
    google-api-core
    google-auth-httplib2
    google-auth<2.0dev
    google-api-python-client
    googleapis-common-protos
    httplib2
    line-bot-sdk
    mutagen
    oauth2client
    PyDrive
    requests
    youtube-dl @ git+https://github.com/animelover1984/youtube-dl.git
    python-dotenv
    python-dateutil
    pytest
    websockets

[options.packages.find]
where=line